スライドのコンテンツ差し替え

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     </header>
 
     <div class="main-carousel">
-            <div class="slide slide1"><h2>Stream hours of classic travel shows on Lonely Planet TV</h2></div>
-            <div class="slide slide2"><h2>'Will we ever make it back?' Returning home to grieve following COVID-19 loss</h2></div>
-            <div class="slide slide3"><h2>The Charms of Riding the Tokaido Shinkansen</h2></div>
-            <div class="slide slide4"><h2>Why reliving our best ever trips can feed the soul</h2></div>
-            <div class="slide slide5"><h2>Virtual vacation: France</h2></div>
-            <div class="slide slide6"><h2>This corner of northeastern Utah is the wilderness only locals…</h2></div>
+            <div class="slide slide1"><h2>Berlin to Venice</h2></div>
+            <div class="slide slide2"><h2>Highlights of Italy</h2></div>
+            <div class="slide slide3"><h2>Gorillas, Game Parks & Beaches</h2></div>
+            <div class="slide slide4"><h2>Indian Getaway</h2></div>
+            <div class="slide slide5"><h2>Columbia Gorge Meditative Waterfalls Scenic Tour</h2></div>
+            <div class="slide slide6"><h2>Private Beijing: Great Wall Experience</h2></div>
     </div>
 
 <script>
@@ -52,7 +52,12 @@
         {name:"PHOLOSOPHIA", Contractor:"鹿島建設中国支店", SiteArea:"8,180.80㎡", BuildingArea:"3,793.30㎡", FloorSpace:"4,759.70㎡", Floors:"地上2階", Construction:"鉄筋コンクリート造、鉄骨鉄筋コンクリート造、鉄骨造", DesignPeriod:"2008/05 - 2012/01", ConstructionPeriod:"2012/01 - 2013/02"},
         {name:"HARMONY", Contractor:"鹿島建設中国支店", SiteArea:"61,856.38㎡", BuildingArea:"1,173.26㎡", FloorSpace:"1,399.19㎡", Floors:"地上2階", Construction:"鉄骨造", DesignPeriod:"2015/01 - 2015/09", ConstructionPeriod:"2015/09 - 2016/03"},
         {name:"INSPIRE", Contractor:"鹿島建設中国支店", SiteArea:"2,382.13㎡", BuildingArea:"974.84㎡", FloorSpace:"1,181.13㎡", Floors:"地上2階", Construction:"鉄骨造", DesignPeriod:"2017/06 - 2018/04", ConstructionPeriod:"2018/04 - 2018/11"},
-        {name:"DISCOVERY", Contractor:"鹿島建設中国支店", SiteArea:"7,622.97㎡", BuildingArea:"3,386.59㎡", FloorSpace:"4,587.13㎡", Floors:"地上2階", Construction:"鉄骨造", DesignPeriod:"2014/09 - 2017/10", ConstructionPeriod:"2017/10 - 2019/01"}
+        {name:"DISCOVERY", Contractor:"鹿島建設中国支店", SiteArea:"7,622.97㎡", BuildingArea:"3,386.59㎡", FloorSpace:"4,587.13㎡", Floors:"地上2階", Construction:"鉄骨造", DesignPeriod:"2014/09 - 2017/10", ConstructionPeriod:"2017/10 - 2019/01"},
+        {name:"FLICKITY", SiteArea:"9,622.97㎡", BuildingArea:"5,386.59㎡", FloorSpace:"6,587.13㎡", Floors:"地上5階", Construction:"鉄骨鉄筋コンクリート造", DesignPeriod:"2016/09 - 2019/10", ConstructionPeriod:"2019/10 - 2021/01"},
+        {name:"BXSLIDER", Contractor:"共立建設", BuildingArea:"5,186.59㎡", FloorSpace:"6,387.13㎡", Floors:"地上3階", Construction:"鉄筋コンクリート造", DesignPeriod:"2016/07 - 2019/08", ConstructionPeriod:"2019/08 - 2020/11"},
+        {name:"PREV", Contractor:"旭工務店", SiteArea:"61,856.42㎡", FloorSpace:"4,745.12㎡", Floors:"地上22階", Construction:"鉄骨鉄筋コンクリート造", DesignPeriod:"2007/02 - 2008/05", ConstructionPeriod:"2008/05 - 2009/06"},
+        {name:"NEXT", Contractor:"山田建設株式会社", SiteArea:"180.80㎡", BuildingArea:"793.30㎡", Floors:"地上8階", Construction:"鉄骨造", DesignPeriod:"2009/05 - 2013/01", ConstructionPeriod:"2013/01 - 2014/02"},
+        {name:"ADVENTURE", Contractor:"清水建設", SiteArea:"61,856.38㎡", BuildingArea:"1,173.26㎡", FloorSpace:"1,399.19㎡", Construction:"鉄骨造", DesignPeriod:"2015/01 - 2015/09", ConstructionPeriod:"2015/09 - 2016/03"}
     ];
     for (let i = 0; i < projects.length; i++){
         console.log ("--------------------");
